fixed spacing issues

--- a/resources/assets/js/gutenberg/editor-style.scss
+++ b/resources/assets/js/gutenberg/editor-style.scss
@@ -61,7 +61,7 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 .wp-block-columns.narrow-gutter{
 	justify-content: center;
 	.wp-block-willamette-blocks-image-box {
-		margin: 0px 5px;
+		margin: 0px 5px 20px;
 	}	
 }
 .wp-block-columns {
@@ -106,7 +106,7 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 		font-family: $alt-header-font;
 		font-size: 2.2em;
 		font-weight: 800;
-		padding: 10px 30px;
+		padding: 10px 10px;
 		line-height: 1.1;
 		color: $white;
 		min-height: 80px;
@@ -155,7 +155,6 @@ h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is
 		.wp-block-group {
 			height: 320px;
 			overflow: hidden;
-			@include screen-px (1500){}
 		}
 	}
 	.is-style-overhang-left  &__content{
